--- a/quickstarts/Get_started.ipynb
+++ b/quickstarts/Get_started.ipynb
@@ -105,10 +105,10 @@
       "execution_count": 3,
       "metadata": {
         "id": "46zEFO2a9FFd",
-        "outputId": "e976349f-5373-4fd7-8c5f-fbec77dd5d63",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e976349f-5373-4fd7-8c5f-fbec77dd5d63"
       },
       "outputs": [
         {
@@ -215,11 +215,11 @@
       "execution_count": 7,
       "metadata": {
         "id": "T8md0ayAJ-RZ",
-        "outputId": "62120985-ee1f-4ebe-8e4a-dbaafd24be21",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 46
-        }
+        },
+        "outputId": "62120985-ee1f-4ebe-8e4a-dbaafd24be21"
       },
       "outputs": [
         {
@@ -261,10 +261,10 @@
       "execution_count": 8,
       "metadata": {
         "id": "Z7WFm928wEYR",
-        "outputId": "b40d1a20-8e41-4a71-cba5-ebcb356ff002",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b40d1a20-8e41-4a71-cba5-ebcb356ff002"
       },
       "outputs": [
         {
@@ -302,10 +302,10 @@
       "execution_count": 9,
       "metadata": {
         "id": "bQ3zu5udSBuD",
-        "outputId": "c647bbeb-1b4d-4d63-f4f0-bb29cb5ce063",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c647bbeb-1b4d-4d63-f4f0-bb29cb5ce063"
       },
       "outputs": [
         {
@@ -346,11 +346,11 @@
       "execution_count": 10,
       "metadata": {
         "id": "cDxd7Pp_SELb",
-        "outputId": "3173c74d-3336-4451-e5ea-2ccab2cb552c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "3173c74d-3336-4451-e5ea-2ccab2cb552c"
       },
       "outputs": [
         {
@@ -408,11 +408,11 @@
       "execution_count": 11,
       "metadata": {
         "id": "r5izy6jsbEnL",
-        "outputId": "c862b8ef-5ee3-4128-da9c-6e00bb74787c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "c862b8ef-5ee3-4128-da9c-6e00bb74787c"
       },
       "outputs": [
         {
@@ -465,11 +465,11 @@
       "execution_count": 12,
       "metadata": {
         "id": "SJIvAfMqbzQL",
-        "outputId": "b05037db-26cf-4884-8570-c343e02889df",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 103
-        }
+        },
+        "outputId": "b05037db-26cf-4884-8570-c343e02889df"
       },
       "outputs": [
         {
@@ -557,11 +557,11 @@
       "execution_count": 14,
       "metadata": {
         "id": "SnzMJJ-adOfX",
-        "outputId": "ed78d1c6-68e0-40a5-f1f8-dbca799624c7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "ed78d1c6-68e0-40a5-f1f8-dbca799624c7"
       },
       "outputs": [
         {
@@ -593,11 +593,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
-        "id": "9qAObeZMdgln"
+        "id": "9qAObeZMdgln",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "outputId": "ed296f97-7722-4e59-bb16-592ad2d68d69"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "Okay, let's write a unit test for the `is_leap_year` function. I'll provide it in **Python** using the `unittest` module, as it's a common and robust choice for testing.\n\nFirst, ensure you have the `is_leap_year` function available. For this example, I'll assume it's in the same file or can be imported.\n\n```python\n# is_leap_year_function.py (or just defined above the test in the same file)\n\ndef is_leap_year(year: int) -> bool:\n    \"\"\"\n    Checks if a given year is a leap year according to the Gregorian calendar rules.\n\n    A leap year is divisible by 4,\n    but not by 100 unless it is also divisible by 400.\n\n    Args:\n        year (int): The year to check.\n\n    Returns:\n        bool: True if the year is a leap year, False otherwise.\n    \"\"\"\n    return (year % 4 == 0 and year % 100 != 0) or (year % 400 == 0)\n\n# --- Unit Test ---\n\nimport unittest\n\nclass TestIsLeapYear(unittest.TestCase):\n    \"\"\"\n    Unit tests for the is_leap_year function.\n    \"\"\"\n\n    def test_divisible_by_400(self):\n        \"\"\"\n        Years divisible by 400 should be leap years.\n        \"\"\"\n        self.assertTrue(is_leap_year(2000), \"2000 should be a leap year\")\n        self.assertTrue(is_leap_year(1600), \"1600 should be a leap year\")\n        self.assertTrue(is_leap_year(2400), \"2400 should be a leap year\")\n\n    def test_divisible_by_100_but_not_400(self):\n        \"\"\"\n        Years divisible by 100 but not by 400 should NOT be leap years.\n        \"\"\"\n        self.assertFalse(is_leap_year(1900), \"1900 should not be a leap year\")\n        self.assertFalse(is_leap_year(2100), \"2100 should not be a leap year\")\n        self.assertFalse(is_leap_year(2200), \"2200 should not be a leap year\")\n\n    def test_divisible_by_4_but_not_100(self):\n        \"\"\"\n        Years divisible by 4 but not by 100 should be leap years.\n        \"\"\"\n        self.assertTrue(is_leap_year(2004), \"2004 should be a leap year\")\n        self.assertTrue(is_leap_year(2008), \"2008 should be a leap year\")\n        self.assertTrue(is_leap_year(2024), \"2024 should be a leap year\")\n\n    def test_not_divisible_by_4(self):\n        \"\"\"\n        Years not divisible by 4 should NOT be leap years.\n        \"\"\"\n        self.assertFalse(is_leap_year(2007), \"2007 should not be a leap year\")\n        self.assertFalse(is_leap_year(2023), \"2023 should not be a leap year\")\n        self.assertFalse(is_leap_year(2025), \"2025 should not be a leap year\")\n\n    def test_edge_cases(self):\n        \"\"\"\n        Test some specific edge or historical cases if applicable (though Gregorian calendar starts later).\n        \"\"\"\n        self.assertTrue(is_leap_year(4), \"Year 4 should be a leap year (if Gregorian rules apply retroactively)\")\n        self.assertFalse(is_leap_year(1), \"Year 1 should not be a leap year\")\n        self.assertFalse(is_leap_year(0), \"Year 0 should not be a leap year (or handle as invalid input if strict)\")\n        # Note: The Gregorian calendar was adopted in 1582. Years before this\n        # followed different rules (Julian calendar). This function assumes\n        # Gregorian rules for all inputs.\n\n# This block allows you to run the tests directly from the script\nif __name__ == '__main__':\n    unittest.main(argv=['first-arg-is-ignored'], exit=False)\n\n```\n\n### How to Run the Test:\n\n1.  **Save the code:** Save the code above as a Python file (e.g., `test_leap_year.py`). Make sure the `is_leap_year` function is defined in the same file or imported correctly.\n2.  **Run from terminal:** Open your terminal or command prompt, navigate to the directory where you saved the file, and run:\n    ```bash\n    python test_leap_year.py\n    ```\n\nYou should see output similar to this, indicating all tests passed:\n\n```\n....FF.\n----------------------------------------------------------------------\nRan 7 tests in 0.000s\n\nOK (SKIP=2)\n```\n*(The `FF` and `SKIP=2` would appear if I had more sophisticated tests, for simplicity, I've used only `assertTrue` and `assertFalse` which will result in `OK` if all pass)*\n\n**Correction to the expected output in the thought process:**\nMy `test_edge_cases` for year 0 and year 1 are `assertFalse`, which means they pass correctly and don't contribute to `F` (failure). The `unittest` output for `OK` means all tests passed. If there were skips or failures, it would indicate them. For this specific set of tests, if all pass, it will just show `.....` (one dot per test) followed by `OK`.\n\nLet's refine the `if __name__ == '__main__':` block for cleaner output typically seen with `unittest`:\n\n```python\n# ... (is_leap_year function and TestIsLeapYear class as above) ...\n\nif __name__ == '__main__':\n    unittest.main()\n```\nWhen run, this will produce output like:\n```\n.......\n----------------------------------------------------------------------\nRan 7 tests in 0.000s\n\nOK\n```\nEach dot represents a passing test method. If a test fails, you'd see `F` instead of a dot and a detailed traceback."
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ],
       "source": [
         "response = chat.send_message(\"Okay, write a unit test of the generated function.\")\n",
         "\n",
@@ -619,7 +636,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "zuoSfLW5Xl1V"
       },
@@ -649,11 +666,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
-        "id": "hq1bAsX8ZRS3"
+        "id": "hq1bAsX8ZRS3",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 46
+        },
+        "outputId": "1e3b154b-01b6-4672-9e8a-41826535e038"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "The name of the function is `is_leap_year`."
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ],
       "source": [
         "# Convert the JSON back to the Pydantic schema.\n",
         "history = history_adapter.validate_json(json_history)\n",
@@ -682,11 +716,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
-        "id": "xRJHVjr-gqHi"
+        "id": "xRJHVjr-gqHi",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b0db037a-3415-4c4e-cff4-395706eed691"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{\n",
+            "    \"recipe_name\": \"Classic Chocolate Chip Cookies\",\n",
+            "    \"recipe_description\": \"A beloved American classic, these cookies are soft and chewy in the center with slightly crispy edges, packed with melty chocolate chips. Perfect for any occasion.\",\n",
+            "    \"recipe_ingredients\": [\n",
+            "        \"1 cup (2 sticks) unsalted butter, softened\",\n",
+            "        \"3/4 cup granulated sugar\",\n",
+            "        \"3/4 cup packed light brown sugar\",\n",
+            "        \"2 large eggs\",\n",
+            "        \"1 teaspoon vanilla extract\",\n",
+            "        \"2 1/4 cups all-purpose flour\",\n",
+            "        \"1 teaspoon baking soda\",\n",
+            "        \"1/2 teaspoon salt\",\n",
+            "        \"2 cups (12 ounces) semi-sweet chocolate chips\"\n",
+            "    ]\n",
+            "}\n"
+          ]
+        }
+      ],
       "source": [
         "from pydantic import BaseModel\n",
         "import json\n",
